--- a/app/views/urls/show.html.erb
+++ b/app/views/urls/show.html.erb
@@ -22,6 +22,13 @@
           </tr>
         </thead>
         <tbody>
+        <% if @tiny_url.visits.empty? %>
+          <tr>
+            <td class="no-records">
+              There are no visits
+            </td>
+          </tr>
+        <% end %>
         <% @tiny_url.visits.each do |visit| %>
           <tr>
             <td data-label="IP"><%= visit.ip_address %></td>
